@@ -59,6 +59,30 @@ class TestHelper extends \SimpleComplex\Tests\Utils\TestHelper
      * (at)expectedException annotation.
      *
      * @param DbQueryInterface|DbQuery $query
+     * @param string $types
+     * @param array $arguments
+     *
+     * @throws \Throwable
+     *      Re-throws query execution failure.
+     */
+    public static function queryParameters(DbQuery $query, string $types, array &$arguments)
+    {
+        try {
+            $query->parameters($types, $arguments);
+        } catch (\Throwable $xcptn) {
+            static::logTrace('query parameters', $xcptn);
+            throw $xcptn;
+        }
+    }
+
+    /**
+     * A means of accessing exceptions, circumventing phpunits'
+     * propensity to consume exceptions.
+     *
+     * Logs trace on exception, and re-throws to accommodate
+     * (at)expectedException annotation.
+     *
+     * @param DbQueryInterface|DbQuery $query
      *
      * @return DbResultInterface|null
      *
