@@ -1,3 +1,7 @@
+SimpleComplex/Database 1.x, 2018-08-08
+--------------------------------------
+- Non-MsSql simple query always checks argument types, and object __toString().
+
 SimpleComplex/Database 1.x, 2018-08-07
 --------------------------------------
 - Moved FETCH_* constants to DbResult, from class Database.
